Add a quick config fix and some minor automations

--- a/.deployment/docker/Dockerfile
+++ b/.deployment/docker/Dockerfile
@@ -4,10 +4,10 @@ FROM golang:1.23.2 AS builder
 WORKDIR /app
 COPY . .
 RUN go mod download
-RUN go build -o rstream-consumer .
+RUN CGO_ENABLED=0 GOOS=linux go build -a -installsuffix cgo -o rstream-consumer .
 
 # Final stage
 FROM alpine:latest
 WORKDIR /app
 COPY --from=builder /app/rstream-consumer .
-ENTRYPOINT ["./rstream-consumer"]
+ENTRYPOINT ["/app/rstream-consumer", "start"]
