--- a/.github/workflows/ci_cd.yaml
+++ b/.github/workflows/ci_cd.yaml
@@ -8,6 +8,11 @@ on:
     branches:
       - '**'
 
+permissions:
+  contents: write
+  # packages: write
+  # issues: write
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -56,27 +61,3 @@ jobs:
           ignore-unfixed: true
           vuln-type: 'os,library'
           severity: 'CRITICAL,HIGH'
-
-  release:
-    runs-on: ubuntu-latest
-    needs: build
-    if: github.ref == 'refs/heads/master'
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Set up Go
-        uses: actions/setup-go@v4
-        with:
-          go-version: 1.23.2
-
-      - name: Set up GoReleaser
-        uses: goreleaser/goreleaser-action@v3
-        with:
-          version: latest
-
-      - name: Run GoReleaser
-        run: goreleaser release --rm-dist
-        env:
-          GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN }}
