--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -22,6 +22,7 @@ services:
       - MONITORING_INTERVAL=1s
       - REDIS_DB=0
       - REDIS_ADDRESS=redis:6379
+      - CONSUMED_MESSAGES_STREAM_NAME=messages:processing
     depends_on:
       redis:
         condition: service_healthy
@@ -39,6 +40,7 @@ services:
       - MONITORING_INTERVAL=1s
       - REDIS_DB=0
       - REDIS_ADDRESS=redis:6379
+      - CONSUMED_MESSAGES_STREAM_NAME=messages:processing
     depends_on:
       redis:
         condition: service_healthy
@@ -56,6 +58,7 @@ services:
       - MONITORING_INTERVAL=1s
       - REDIS_DB=0
       - REDIS_ADDRESS=redis:6379
+      - CONSUMED_MESSAGES_STREAM_NAME=messages:processing
     depends_on:
       redis:
         condition: service_healthy
@@ -73,6 +76,7 @@ services:
       - MONITORING_INTERVAL=1s
       - REDIS_DB=0
       - REDIS_ADDRESS=redis:6379
+      - CONSUMED_MESSAGES_STREAM_NAME=messages:processing
     depends_on:
       redis:
         condition: service_healthy
@@ -90,6 +94,7 @@ services:
       - MONITORING_INTERVAL=1s
       - REDIS_DB=0
       - REDIS_ADDRESS=redis:6379
+      - CONSUMED_MESSAGES_STREAM_NAME=messages:processing
     depends_on:
       redis:
         condition: service_healthy
